fix: Bad wrapping of i18n header links (#1295)

--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -121,6 +121,7 @@
 			cursor: pointer;
 			vertical-align: top;
 			appearance: none;
+			white-space: nowrap;
 
 			@media (max-width: /* --header-mobile-breakpoint */ 50rem) {
 				min-width: 100px;
